force-app/main/default/objects/Portfolio__c/fields/Active_Estimation__c.field-meta.xml
<CustomField>
    <fullName>Active_Estimation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Estimation</label>
    <type>Checkbox</type>
</CustomField>