force-app/main/default/objects/Portfolio__c/fields/Brand_Variety__c.field-meta.xml
<CustomField>
    <fullName>Brand_Variety__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Variety</label>
    <referenceTo>Brand_Variety__c</referenceTo>
    <relationshipLabel>Portfolios</relationshipLabel>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>