force-app/main/default/objects/Portfolio__c/listViews/All_Portfolios.listView-meta.xml
<ListView>
    <fullName>All_Portfolios</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Brand_Variety__c</columns>
    <columns>Season__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Season__c</field>
        <operation>equals</operation>
        <value>22/2022</value>
    </filters>
    <label>All Portfolios</label>
</ListView>